--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
         <label>
             Converter <b>para</b>
-            <select class = "currency-select">
-                <option value ="dolar">US$ Dólar americano</option>
-                <option value = "euro">€ Euro</option>
-                <option value = "libra">£ Libra</option>
-                <option value = "bitcoin">₿ Bitcoin</option>
+            <select class="currency-select">
+                <option value="dolar">US$ Dólar americano</option>
+                <option value="euro">€ Euro</option>
+                <option value="libra">£ Libra</option>
+                <option value="bitcoin">₿ Bitcoin</option>
             </select>
         </label>
 
@@ -43,17 +43,17 @@
         </label>
 
         <button class="convert-button"> Converter </button>
-
+        
         <section>
             <div>
                 <img class="brasil-ico" src="Assets/flagBrasil.ico" alt="ico-moeda-a-ser-covertida">
                 <p class="currency">Real</p>
                 <p class="currency-value-to-convert">R$ 0,00</p>
             </div>
-            <img class="arrow-ico" src="Assets/arrow-ico.ico" alt="flecha-pra-baixo">
-            <div>
+            <img class="arrow-ico" src="Assets/arrow-right.png" alt="flecha direita">
+            <div class="div-2"> 
                 <img class="currency-img" src="Assets/euaflag.ico" alt="ico-moeda-já-convertida">
-                <p class ="currency" id ="currency-name">Dólar americano</p>
+                <p class="currency" id="currency-name">Dólar</p>
                 <p class="converted-value">US$ 0,00</p>
             </div>
         </section>
